(20/03)Links download e imagens dinamicas

--- a/08.css
+++ b/08.css
@@ -5,8 +5,7 @@ a {
 }
 /*link visitados*/
 a:visited {
-    color: green;
-    filter: brightness(15%); /*cor 80% mais escura*/
+    color: greenyellow;
 }
 /*mouse sobre*/
 a:hover  {
