--- a/14.css
+++ b/14.css
@@ -23,7 +23,7 @@ header{
     padding: 10px 20px;
 }
 nav ul li{
-    display: inline-block;
+    display: inline-block; /*deixa menu horizontal*/
     margin: 10px;
 }
 
