(08/05) Diferenciação de cor

--- a/14.css
+++ b/14.css
@@ -1,7 +1,15 @@
 /* CSS Reset */
 /*@import ,quando existem , devem ser o primeiro item de um arquivo CCS*/
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,800;1,400;1,800&display=swap');
-
+/*definicao de variaveis*/
+:root{
+    --cor-primaria: #550000;
+    --cor-secundaria: #FF7F2A;
+    --cor-fundo-clara: #DDDDDD;
+    --cor-fundo-escura: #BBBBBB;
+    --cor-texto-escura: #777777;
+    --cor-texto-clara: #FFFFFF;
+}
 *{
     /*Todos os Elementos*/
     padding: 0;
@@ -15,11 +23,23 @@
     /*Exemplo de familia de fonte MONOESPAÇADA
     font-family: Consolas, 'Courier New', monospace;*/  
     font-family: Raleway, Calibri, Arial, sans;
+    font-size: 16px;
 
 }
-
+html{ /*tamanho da fonte padrão do documento*/
+    font-size: 16px;
+}
+/*cor de todos os links de site */
+a {
+    color:var(--cor-primaria);
+    text-decoration: none; /*sem sublinhado*/
+}
+a:hover{ /*mouse passando em cima do link*/
+    color: var(--cor-secundaria);
+    text-decoration: underline;/*volta sublinhado*/
+}
 header{
-    background-color: #550000;
+    background-color: var(--cor-primaria);
     padding: 10px 20px;
 }
 nav ul li{
@@ -28,6 +48,46 @@ nav ul li{
 }
 
 nav {
-    background-color: #FF7F2A; /*cor fundo*/
-    color: #FFFFFF;/*cor texto*/
+    background-color: var(--cor-secundaria); /*cor fundo*/
+    color: var(--cor-fundo-clara);/*cor texto*/
+}
+#content{
+    background-color: var(--cor-fundo-escura);
+    padding: 20px;
+    display: flex; /*os elementos e seus filhos usarao flexbox*/
+    flex-direction: row; /*filhos estarão em linha*/
+}
+section{
+    background-color:var(--cor-fundo-clara);
+    padding: 10px;
+    margin-bottom: 20px;
+    /*Bordas arredondas*/
+    border-radius: 14px;
+    /*Sombra(drop-down shadow*/
+    box-shadow: 3px 3px 10px rgba(0,0,0,0.25);
+    flex-grow: 1;
+}
+#primaria{
+    flex-grow:3 ;/*tres unidades de largura*/
+}
+#secundaria{
+    margin-left: 20px;
+    background-color: var(--cor-fundo-escura);
+}
+section article{ /*article que está dentro de uma section*/
+    margin: 24px 0; /*24 px no top/bottom , 0 left/right*/
+}
+section > h1{ /*Apenas os H1 que sao filhos diretos de section*/
+    text-transform:uppercase ;/*deixar o texto em maiusculas*/
+    color: var(--cor-secundaria);
+}
+article > h1 { /*Só os H1 q são filhos diretos de article*/
+    font-size: 1.5rem; /*1.5x tamanho da fonte do elemento raiz (html)*/
+    margin-bottom: 6px;
+}
+article > h1 > a {
+    font-size: 1.5rem; /*1.5x tamanho da fonte do elemento raiz (html)*/
+}
+article > p {
+    color: var(--cor-texto-escura);
 }
