--- a/14.css
+++ b/14.css
@@ -5,6 +5,7 @@
 :root{
     --cor-primaria: #550000;
     --cor-secundaria: #FF7F2A;
+    --cor-secundaria-clara: #FFAF7B;
     --cor-fundo-clara: #DDDDDD;
     --cor-fundo-escura: #BBBBBB;
     --cor-texto-escura: #777777;
@@ -59,7 +60,7 @@ nav {
 }
 section{
     background-color:var(--cor-fundo-clara);
-    padding: 10px;
+    padding: 24px;
     margin-bottom: 20px;
     /*Bordas arredondas*/
     border-radius: 14px;
@@ -68,11 +69,12 @@ section{
     flex-grow: 1;
 }
 #primaria{
-    flex-grow:3 ;/*tres unidades de largura*/
+    width:75% ;/*tres unidades de largura*/
 }
 #secundaria{
     margin-left: 20px;
     background-color: var(--cor-fundo-escura);
+    width: 25%;
 }
 section article{ /*article que está dentro de uma section*/
     margin: 24px 0; /*24 px no top/bottom , 0 left/right*/
@@ -90,4 +92,45 @@ article > h1 > a {
 }
 article > p {
     color: var(--cor-texto-escura);
+}
+article > h2 {
+    font-size: 0.8rem;
+    text-transform: uppercase; /*Todas as letras em maiusculas*/
+}
+.destaque {
+    background-color: var(--cor-secundaria-clara);
+    padding: 24px;
+    border-radius: 4px; /* Bordas LEVEMENTE arredondadas*/
+}
+.destaque > p {
+    color: #000;
+    font-size: 1.5rem;
+}
+.destaque > h1 > a {
+    font-size: 2.5rem;
+}
+.destaque > h2 {
+    font-size: 1rem;
+}
+.destaque > img {
+    width: 450px;
+   
+}
+.foto-texto {
+    display: flex;
+    flex-direction: row;
+}
+img {
+    width: 300px;
+    height: 400;
+    margin-right: 24px;
+    border-radius: 4px;
+}
+#secundaria > aside > img {
+    display: block;/*margin auto à esuqerda e à direita centraliza o elemento quando este é display: block*/
+    margin: 0 auto; 
+}
+#secundaria > aside > h1 > a {
+    font-size: 0.8rem;
+    color:#000;
 }
