--- a/portal/14.css
+++ b/portal/14.css
@@ -3,284 +3,375 @@
 
 /* Definição de variáveis */
 :root {
-    --cor-primaria: #550000;
-    --cor-secundaria: #FF7F2A;
-    --cor-secundaria-clara: #FFAF7B;
-    --cor-fundo-clara: #DDDDDD;
-    --cor-fundo-escura: #BBBBBB;
-    --cor-texto-claro: #FFFFFF;
-    --cor-texto-escura: #777777;
+--cor-primaria: #550000;
+--cor-secundaria: #FF7F2A;
+--cor-secundaria-clara: #FFAF7B;
+--cor-fundo-clara: #DDDDDD;
+--cor-fundo-escura: #BBBBBB;
+--cor-texto-claro: #FFFFFF;
+--cor-texto-escura: #777777;
 }
 
 /* CSS reset */
 * { /* Todos os elementos */
-    padding: 0;
-    margin: 0;
-    /* Exemplo de família de fonte SEM serifa
-    font-family: Calibri, Arial, sans; */
+padding: 0;
+margin: 0;
+/* Exemplo de família de fonte SEM serifa
+font-family: Calibri, Arial, sans; */
 
-    /* Exemplo de família de fonte COM serifa
-    font-family: Georgia, 'Times New Roman', serif; */
+ /* Exemplo de família de fonte COM serifa
+font-family: Georgia, 'Times New Roman', serif; */
 
-    /* Exemplo de família de fonte MONOESPAÇADA 
-    font-family: Consolas, 'Courier New', monospace; */
+ /* Exemplo de família de fonte MONOESPAÇADA
+font-family: Consolas, 'Courier New', monospace; */
 
-    /* Família de fontes da web (webfonts) */
-    font-family: Raleway, Calibri, Arial, sans;
-    font-size: 16px;
-    box-sizing: border-box;/* faz com que bordas e margens sejam considerados no tamanho total do elemnto*/
-    
+ /* Família de fontes da web (webfonts) */
+font-family: Raleway, Calibri, Arial, sans;
+font-size: 16px;
+/* Faz com que bordas e margens sejam considerados no tamanho total do elemento */
+box-sizing: border-box;
 }
-html {                  /* Tamanho de fonte padrão do documento */
-    font-size: 16px;
+html { /* Tamanho de fonte padrão do documento */
+font-size: 16px;
 }
 
 /* Configuração de todos os links do site */
 a {
-    color: var(--cor-primaria);
-    text-decoration: none;  /* Sem sublinhado */
+color: var(--cor-primaria);
+text-decoration: none; /* Sem sublinhado */
 }
 
-a:hover {   /* Mouse passando em cima do link */
-    color: var(--cor-secundaria);
-    text-decoration: underline; /* Volta o sublinhado */
+a:hover { /* Mouse passando em cima do link */
+color: var(--cor-secundaria);
+text-decoration: underline; /* Volta o sublinhado */
 }
 
 header {
-    background-color: var(--cor-primaria);
-    padding: 10px 20px;
-    display: flex;
-    justify-content: space-between;
+background-color: var(--cor-primaria);
+padding: 10px 20px;
+display: flex;
+justify-content: space-between;
 }
-#social{
-    background-color: transparent;
-    display: flex;
-    align-content: baseline;
+
+#social {
+background-color: transparent; /* Tira a cor de fundo */
+display: flex;
+align-items: center;
 }
-#social a span{
-    margin-left: 6px;
-    display: none;
+
+#social img {
+width: 32px;
 }
-#social img{
-    width: 32px;
+
+#social a {
+color: #FFFFFF;
+text-decoration: none;
+display: flex;
+align-items: center;
 }
-#social a{
-    color: #FFFFFF;
-    text-decoration: none;
-    display: flex;
-    align-items: center
+
+#social a span {
+margin-left: 6px;
+display: none; /* Esconder o texto dos links */
 }
-#social a:hover span{
-    display: inline;
+
+#social a:hover span {
+display: inline; /* Mostra novamente o texto ao passar o mouse */
 }
 
 nav ul li {
-    display: inline-block;  /* Deixa o menu na horizontal */
-    margin: 10px;
+display: inline-block; /* Deixa o menu na horizontal */
+margin: 10px;
 }
 
 nav {
-    background-color: var(--cor-secundaria);  /* Cor do fundo */
-    color: var(--cor-texto-claro);             /* Cor do texto */
+background-color: var(--cor-secundaria); /* Cor do fundo */
+color: var(--cor-texto-claro); /* Cor do texto */
 }
-#menu{
-    padding: 0 20px;
+
+#menu {
+padding: 0 20px;
 }
-#menu li{
-    margin: 10px 0;
+
+
+#menu li {
+margin: 10px 0;
 }
-#menu a{
-    height: 100%;
-    padding: 10px 20px;
-    color: #FFFFFF;
-    transition: 500ms;
-    background-color: var(--cor-secundaria);
+
+#menu a {
+height: 100%;
+padding: 10px 20px;
+color: #FFFFFF;
+transition: 300ms;
+background-color: var(--cor-secundaria);
+margin-top: 48px;
 }
-#menu a:hover{
-    filter: brightness(0.8);
-    text-decoration: none;
+
+#menu a:hover {
+filter: brightness(0.8); /* Diminui o brilho em 20%, deixando mais escuro */
+text-decoration: none;
+}
+
+#menu-contraido {
+margin-top: 24px;
+display: inline-block;
+position: relative;
+}
+
+#menu-contraido input, #menu-contraido span {
+width: 40px;
+height: 40px;
+position: absolute;
+top: 0;
+left: 0;
+}
+
+#menu-contraido input {
+z-index: 100; /* Traz o input para cima */
+opacity: 0; /* Esconde o input */
+display: none;
+}
+
+#menu-contraido span {
+display: block;
+background-color: var(--cor-primaria);
+border-radius: 4px;
+border: 2px solid #FFFFFF;
+background-image: url('site/menu-icon-48x48.png');
+background-size: 40px 40px;
+background-position: center center;
+cursor: pointer; /* Cursor de mãozinha */
+display: none;
+}
+
+/* Seletor ~: seleciona o próximo elemento (irmão) */
+#menu-contraido input:checked ~ span {
+/* Troca a imagem */
+background-image: url('site/menu-icon-48x48.png');
 }
 
 #content {
-    background-color: var(--cor-fundo-clara);
-    padding: 20px;
-    /* Este elemento e seus filhos usarão flexbox */
-    display: flex;
-    flex-direction: row; /* Os filhos ficarão em linha, na horizontal */
+background-color: var(--cor-fundo-clara);
+padding: 20px;
+/* Este elemento e seus filhos usarão flexbox */
+display: flex;
+flex-direction: row; /* Os filhos ficarão em linha, na horizontal */
 }
 
 main, aside {
-    background-color: var(--cor-texto-claro);
-    padding: 24px;
-    margin-bottom: 20px;
-    /* Bordas arrendondadas */
-    border-radius: 10px;
-    /* Sombra (drop-down shadow) */
-    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.25);
-    flex-grow: 1;   /* 1 unidade de largura (padrão) */
-    max-width: 100%;
-    
+background-color: var(--cor-texto-claro);
+padding: 24px;
+margin-bottom: 20px;
+/* Bordas arrendondadas */
+border-radius: 10px;
+/* Sombra (drop-down shadow) */
+box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.25);
+flex-grow: 1; /* 1 unidade de largura (padrão) */
+max-width: 100%;
 }
 
 main {
-    width: 75%;
+width: 75%;
 }
 
 aside {
-    margin-left: 20px;
-    background-color: var(--cor-fundo-escura);
-    width: 25%;
+margin-left: 20px;
+background-color: var(--cor-fundo-escura);
+width: 25%;
 }
 
-main article, aside article {   /* article que estão de dentro de main ou aside */
-    margin: 24px 0;     /* 24px top/bottom, 0 left/right */
+main article, aside article { /* article que estão de dentro de main ou aside */
+margin: 24px 0; /* 24px top/bottom, 0 left/right */
 }
 
-main > h1, aside > h1 {          /* Apenas os h1 que são filhos diretos de main ou aside */
-    /* Deixar o texto em maiúsculas */
-    text-transform: uppercase;
-    color: var(--cor-secundaria);
+main > h1, aside > h1 { /* Apenas os h1 que são filhos diretos de main ou aside */
+/* Deixar o texto em maiúsculas */
+text-transform: uppercase;
+color: var(--cor-secundaria);
 }
 
-article > h1 {    /* Só os h1 que são filhos diretos de article */
-    margin-bottom: 6px;
+article > h1 { /* Só os h1 que são filhos diretos de article */
+margin-bottom: 6px;
 }
 
 article > h1 > a {
-    font-size: 1.5rem;      /* 1.5x o tamanho da fonte do elemento raiz (html) */
+font-size: 1.5rem; /* 1.5x o tamanho da fonte do elemento raiz (html) */
 }
 
 article > p {
-    color: var(--cor-texto-escura);
+color: var(--cor-texto-escura);
 }
 
 article > h2 {
-    font-size: 0.8rem;
-    text-transform: uppercase; /* Todas as letras em maiúsculas */
+font-size: 0.8rem;
+text-transform: uppercase; /* Todas as letras em maiúsculas */
 }
 
 .destaque {
-    background-color: var(--cor-secundaria-clara);
-    padding: 24px;
-    border-radius: 4px;  /* Bordas LEVEMENTE arredondadas */
+background-color: var(--cor-secundaria-clara);
+padding: 24px;
+border-radius: 4px; /* Bordas LEVEMENTE arredondadas */
 }
 
 .destaque p {
-    color: #000000;
-    font-size: 1.5rem;
+color: #000000;
+font-size: 1.5rem;
 }
 
 .destaque > h1 > a {
-    font-size: 2.5rem;
+font-size: 2.5rem;
 }
 
 .destaque > h2 {
-    font-size: 1rem;
+font-size: 1rem;
 }
 
 .destaque img {
-    width: 450px;
-    margin-right: 24px;
-    border-radius: 4px;
-    max-width: 100%;/*largura max limitada a largura do pai*/
+width: 450px;
+margin-right: 24px;
+border-radius: 4px;
+/* Largura máxima limitada à largura do pai */
+max-width: 100%;
 }
 
 .foto-texto {
-    display: flex;
-    flex-direction: row; /* Os filhos ficarão em linha, na horizontal */
+display: flex;
+flex-direction: row; /* Os filhos ficarão em linha, na horizontal */
 }
 
 aside > article > img {
-    display: block;
-    /* margin auto à esquerda e à direita centraliza o elemento quando este é
-       display: block */
-    margin: 0 auto; 
-    border-radius: 4px;/*borda arredondada*/
-    max-width: 100%;/*Largura maxima é 100% da largura do pai*/
+display: block;
+/* margin auto à esquerda e à direita centraliza o elemento quando este é
+display: block */
+margin: 0 auto;
+border-radius: 4px; /* Borda arredondada */
+/* Largura máxima é 100% da largura do pai */
+max-width: 100%;
 }
 
 aside > article > h1 > a {
-    font-size: 1rem;
-    color: #000000;
+font-size: 1rem;
+color: #000000;
+}
+
+aside > article > h1 {
+margin-top: 6px;
+}
+
+footer {
+background-color: var(--cor-primaria);
+padding: 24px;
+color: #ffffff;
+display: flex;
+flex-direction: row;
+/* Dá espaço automaticamente entre os itens de um flexbox */
+justify-content: space-around;
+}
+
+footer a {
+color: #ffffff;
+}
+
+footer ul li {
+display: inline-block; /* Coloca os itens de uma lista na horizontal */
+padding: 0 12px;
+border-right: 2px solid #ffffff;
+}
+
+/* Tirar a borda direita do último li */
+footer ul li:last-child {
+border-right: none;
+}
+
+footer img {
+width: 200px;
+height: 100%;
+}
+
+/* Regras para larguras específicas de tela */
+@media screen and (max-width: 1020px) { /* Breakpoint (ponto de quebra) */
+main {
+width: 60%;
+}
+aside {
+width: 40%;
+}
+.foto-texto {
+flex-direction: column; /* Os filhos ficarão em coluna, na vertical */
+}
+.destaque img {
+margin-right: 0;
+margin-bottom: 24px;
+}
+}
+
+@media screen and (max-width: 800px) {
+#menu {
+min-height: 88px;
+}
+#menu ul {
+margin-top: 50px;
+margin-left: -18px;
+width: 100%;
+}
+#menu ul li { /* Menu vertical */
+display: block;
+margin: 0;
+padding: 12px 0;
+}
+#menu a {
+    width: 100%;
+}
+#menu-contraido {
+margin-top: 24px;
+width: 100%;
+}
+#menu-contraido ul {
+display: none;
+
+}
+/* Mostra o botão do menu */
+#menu-contraido input, #menu-contraido span {
+display: block;
+}
+#menu-contraido input:checked ~ ul {
+display: block;
+}
+
+ #content {
+flex-direction: column; /* Os filhos ficarão em coluna, na vertical */
+}
+main {
+width: 100%;
+}
+aside {
+margin-left: 0;
+width: 100%;
 }
 aside > article > h1 {
-    margin-top: 6px;
+text-align: center;
 }
-footer{
-    background-color: var(--cor-primaria);
-    padding: 24px;
-    color: var(--cor-texto-claro);    
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+.destaque img {
+/* Centralizar a imagem */
+margin-left: auto;
+margin-right: auto;
 }
-footer a{
-    color: var(--cor-texto-claro);
+footer {
+flex-direction: column;
 }
-footer ul li{
-    display: inline-block;
-    margin: 0 6px;
-    padding: 0 12px;
-    border-right: 2px solid white;
+footer > * { /* Todos os filhos DIRETOS de footer */
+margin-bottom: 12px;
 }
-footer img {
-    width: 200px;
-    height: 100%;
+footer ul li:first-child { /* Só o primeiro (first-child) li */
+padding-left: 0;
 }
-footer ul li:last-child{
-    border-right: none;
+footer address {
+text-align: right;
 }
-/*Regras para larguras especificas de tela */
-@media screen and (max-width: 1020px) { /* Breakpoint (ponto de quebra)*/
-    main {
-       width: 60%;
-    }
-    aside {
-        width: 40%;
-    }
-    .foto-texto {
-        flex-direction: column; /* Os filhos ficarão em linha, na vertical */
-    }
-    .destaque img {
-        margin-bottom: 24px;
-        margin-right: 0px;
-    }
-    
 }
-@media screen and (max-width: 880px ){
-    /*Colocar o menu em um botão*/
-    /*Fazer:*/
 
-
-    #content {
-        flex-direction: column; /* Os filhos ficarão em linha, na vertical */
-    }
-    main {
-        width: 100%;
-    }
-    aside {
-        width: 100%;
-        margin-left: 0;
-    }
-    aside > article > h1 {
-        text-align: center ;
-    }
-    .destaque img {
-        /*centralizar a imagem*/
-        margin-left: auto;
-        margin-right: auto;
-    }
-    footer > * {  /*todos filhos DIRETOS de footer*/
-        flex-direction: column;
-    }
-    footer ul li:first-child {  /* Só o primeiro (first child)*/
-        padding-left: 0;
-    }
-    footer address {
-        text-align: right;
-    }
-}
-@media screen and (max-width: 640px){
-    /*Colocar o logo principal e os icones de redes sociais em coluna*/
-    
+@media screen and (max-width: 640px) {
+/*
+A FAZER: colocar o logo principal e os ícones de redes sociais em coluna
+*/
 }
