--- a/portal/14.css
+++ b/portal/14.css
@@ -226,7 +226,7 @@ font-size: 2.5rem;
 font-size: 1rem;
 }
 
-.destaque img {
+.foto-texto img {
 width: 450px;
 margin-right: 24px;
 border-radius: 4px;
@@ -237,6 +237,34 @@ max-width: 100%;
 .foto-texto {
 display: flex;
 flex-direction: row; /* Os filhos ficarão em linha, na horizontal */
+}
+
+.individual h1{
+    color: var(--cor-primaria);
+    font-size: 2.5rem;
+    margin: 12px 0;
+}
+
+.individual p{
+    font-size: 1.1rem;
+    margin-bottom: 12px;
+    color: #444444;
+}
+
+.individual .foto-texto{
+    flex-direction: column;
+}
+
+.individual .foto-texto img{
+    /*centralizar imagem horizontalmente*/
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.individual .foto-texto p {
+    margin: 12px 0 36px 0;
+    font-size: 1.2rem;
+    font-weight: bold;
 }
 
 aside > article > img {
@@ -308,6 +336,7 @@ margin-bottom: 24px;
 @media screen and (max-width: 800px) {
 #menu {
 min-height: 88px;
+padding: 0;
 }
 #menu ul {
 margin-top: 50px;
@@ -316,11 +345,11 @@ width: 100%;
 }
 #menu ul li { /* Menu vertical */
 display: block;
-margin: 0;
-padding: 12px 0;
+margin:6px 0;
 }
 #menu a {
     width: 100%;
+    display: block;
 }
 #menu-contraido {
 margin-top: 24px;
@@ -333,6 +362,7 @@ display: none;
 /* Mostra o botão do menu */
 #menu-contraido input, #menu-contraido span {
 display: block;
+left:20px;
 }
 #menu-contraido input:checked ~ ul {
 display: block;
@@ -374,4 +404,14 @@ text-align: right;
 /*
 A FAZER: colocar o logo principal e os ícones de redes sociais em coluna
 */
+ header{
+   flex-direction: column;
+   align-items: center;
+ }
+ header img {
+     max-width: 100%;
+ }
+ .destaque > h1 > a {
+    font-size: 2rem;
+    }
 }
